--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,22 @@
+---
+import '../styles/reset.css';
+import '../styles/global.css';
+import Header from '../sections/Header.astro';
+import Footer from '../sections/Footer.astro';
+---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/arkytas_logo_simple.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content="Arkytas ofrece cursos de robótica y tecnología educativa para niños y jóvenes, fomentando creatividad, pensamiento crítico y habilidades del siglo XXI.">
+		<title>Arkytas Academia de Robótica</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
