--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,9 +2,25 @@
   <div class="container">
     <h2 class="title-40 text-dark-blue">Contacto</h2>
     <p class="body-16">
-      ¿Tienes preguntas o quieres más información? ¡Nos encantaría saber de ti!
-      Completa el formulario a continuación o envíanos un correo electrónico a
-      <a href="mailto:hola@arkytas.com" class="link-primary"> </a>
+      ¿Tienes preguntas o quieres más información? ¡Nos encantaría saber de ti! envíanos un correo electrónico a
+      <a href="mailto:hola@arkytas.com" class="link-mail">hola@arkytas.com</a>
     </p>
   </div>
 </section>
+
+<style scoped>
+  .contact {
+    padding: 120px 0 80px 0;
+    background-color: white
+  }
+
+  .contact .container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contact .link-mail {
+    margin-top: 40px;
+  }
+</style>
