--- a/src/components/Courses.astro
+++ b/src/components/Courses.astro
@@ -14,7 +14,7 @@ import Advanced from "../assets/images/course_advanced.webp";;
           <Image
             src={Introduction}
             class="course_image course_introduction"
-            loading="eager"
+            loading="lazy"
             alt="imagen representativa del curso de introducción a la robótica para niños"
           />
           <div class="description">
@@ -33,7 +33,7 @@ import Advanced from "../assets/images/course_advanced.webp";;
           <Image
             src={Basic}
             class="course_image course_basic"
-            loading="eager"
+            loading="lazy"
             alt="imagen representativa del curso básico de robótica para niños"
           />
           <div class="description">
@@ -52,7 +52,7 @@ import Advanced from "../assets/images/course_advanced.webp";;
           <Image
             src={Advanced}
             class="course_image course_advanced"
-            loading="eager"
+            loading="lazy"
             alt="imagen representativa del curso avanzado de robótica para niños"
           />
           <div class="description">
